# libido

./: AUTHORS  CMakeLists.txt  Makefile  README.rst
examples/: CMakeLists.txt  Makefile  all-posters.c  args.h  libido-query.c  util.c  util.h
include/: libido.h
src/: CMakeLists.txt  libido.c
